examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx:48:14
//    |
// 48 |     let _y = match x {
//    |              ^^^^^^^^^
// 49 |         LeftI(a, b, c) -> a,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 50 |         RightI(n) -> n,
//    | ^^^^^^^^^^^^^^^^^^^^^^^
// 51 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
//
//
// error[E085]: Constructor Pattern Arity Mismatch
//
// Constructor pattern `LeftI` expects 1 argument(s) but got 3.
//
//   examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx:49:9
//    |
// 49 |         LeftI(a, b, c) -> a,
//    |         ^^^^^^^^^^^^^^
//
// Hint:
//   Check the constructor's declared pattern field count.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015
// expect-error: E085

// E085: constructor-pattern arity mismatch (expects 1 field, pattern provides 3).

type EitherI = LeftI(Int) | RightI(Int)

fn main() {
    let x = LeftI(1)
    let _y = match x {
        LeftI(a, b, c) -> a,
        RightI(n) -> n,
    }
}
